fixed some bugs and added better dialog styling on mobile devices

--- a/frontend/src/app/manage/manage.component.scss
+++ b/frontend/src/app/manage/manage.component.scss
@@ -148,7 +148,7 @@ manager, .manage-rows {
         subject-dialog {
             display: block;
             box-sizing: border-box;
-            width: 500px;
+            //width: 500px;
 
             .dialog-body {
                 md-input-container {
